tests/integration/snapshots/integration__conformance__n_number_+1.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
[+1]
stdout ---

stderr ---
error: unexpected character `+`. expected start of a json value
 --> stdin:1:2
  |
1 | [+1]
  |  ^
