tests/integration/snapshots/integration__conformance__n_number_-01.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[-01]
stdout ---

stderr ---
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [-01]
  |  ^-
  |   |
  |   first zero found here
  |
help: remove the leading zeros
  |
1 - [-01]
1 + [-1]
  |
