tests/integration/snapshots/integration__conformance__n_number_-01.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[-01]
stderr ---
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [-01]
  |  ^-
  |   |
  |   first zero found here
  |
help: remove the leading zeros
  |
1 - [-01]
1 + [-1]
  |
