tests/integration/snapshots/integration__conformance__n_number_-nan.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[-NaN]
stdout ---

stderr ---
error: expected digit following minus sign, found `N`
 --> stdin:1:2
  |
1 | [-NaN]
  |  ^
  |  |
  |  minus sign found here
